[package]
name = "bevy-jam-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version="0.8.0", default-features=false, features=["bevy_ui", "bevy_text", "bevy_winit", "filesystem_watcher"] }
post-processing={ path="post-processing" }
bevy_rapier2d = "0.16.1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
